<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/listrecords"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="72dp"
        android:choiceMode="multipleChoice"
        android:listSelector="@android:color/darker_gray" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:background="@android:color/darker_gray"
        android:id="@+id/tableRow">
        <TextView
            android:id="@+id/dbid_text"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/id"></TextView>

        <TextView
            android:id="@+id/ltrs_txt"
            android:layout_width="55dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/liters"></TextView>

        <TextView
            android:id="@+id/price_text"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:textStyle="bold"
            android:text="@string/price"></TextView>

        <TextView
            android:id="@+id/km_text"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:textStyle="bold"
            android:text="@string/km"></TextView>
        <TextView
            android:id="@+id/timestamp_text"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:textStyle="bold"
            android:text="@string/time"></TextView>

        <ImageButton
            android:id="@+id/add"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
             android:src="@drawable/add" />
    </TableRow>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11dp"
        android:max="100" />

</RelativeLayout>
