<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/litresLabel"
                android:layout_width="158dp"
                android:layout_height="35dp"
                android:text="@string/liters"
                tools:layout_editor_absoluteX="184dp"
                tools:layout_editor_absoluteY="16dp" />
        <EditText
            android:id="@+id/literText"
            android:layout_width="101dp"
            android:layout_height="53dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="0.0"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="9dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/priceLabel"
                android:layout_width="155dp"
                android:layout_height="24dp"
                android:text="@string/price"
                tools:layout_editor_absoluteX="184dp"
                tools:layout_editor_absoluteY="117dp" />
            <EditText
                android:id="@+id/priceText"
                android:layout_width="104dp"
                android:layout_height="38dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="0.0"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="125dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/kilometersLabel"
                android:layout_width="149dp"
                android:layout_height="37dp"
                android:text="@string/kilometers"
                tools:layout_editor_absoluteX="184dp"
                tools:layout_editor_absoluteY="201dp" />
            <EditText
                android:id="@+id/kilometersText"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="0.0"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="199dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="289dp" />
            <Button
                android:id="@+id/cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancle"
                tools:layout_editor_absoluteX="193dp"
                tools:layout_editor_absoluteY="289dp" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
