<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="21dp"
        android:paddingLeft="5dp"
        android:text="@string/average_gasoline_price_last_month" />

    <TextView
        android:id="@+id/gasprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.0 $"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignStart="@+id/gaspermonth" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/total_gasoline_purchased_last_month"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/gasliters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.0 $"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="27dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView6"
        android:layout_marginStart="13dp"
        android:layout_toEndOf="@+id/textView6"
        android:dropDownWidth="match_parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:paddingLeft="5dp"
        android:text="@string/total_gasoline_purchased" />

    <TextView
        android:id="@+id/gaspermonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignStart="@+id/gasliters"
        android:text="0.0 $" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/gaspermonth"
        android:clickable="true"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_menu_help" />

</RelativeLayout>
